--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,11 @@ title = "DPSG Stamm Tabularasa"
 languageCode = "de"
 DefaultContentLanguage = "de"
 paginate = "10" # Number of posts per page
-theme = "hugo-dpsg"
+#theme = "hugo-dpsg"
+
+[module]
+[[module.imports]]
+    path = 'github.com/emhl/hugo-dpsg'
 
 # [Author] # Used in authorbox
 #   name = "Scout Master"
