update baseurl so the example deployment works

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "https://dpsg-tabularasa.de"
+baseurl = "https://hugo-dpsg.pages.dev"
 title = "DPSG Stamm Tabularasa"
 languageCode = "de"
 DefaultContentLanguage = "de"
